# openapi.yaml
@@ -504,20 +504,128 @@ paths:
           description: Tweet not found
         '500':
           description: Internal server error
-  /v1/admin/stats:
+  /v1/users/{id_user}/followers:
     get:
       tags:
-        - Admins
-      summary: Get counts of all users and tweets
+        - Users
+      summary: Get all followers
+      security:
+        - apiKey: [ ]
+      parameters:
+        - name: id
+          in: path
+          description: User ID
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Get all of user followers
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SuccessResponseList'
+        '500':
+          description: Internal Server Error
+  /v1/users/{id_user}/followings:
+    get:
+      tags:
+        - Users
+      summary: Get all followings
+      security:
+        - apiKey: [ ]
+      parameters:
+        - name: id
+          in: path
+          description: User ID
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Get all of user following
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SuccessResponseList'
+        '500':
+          description: Internal Server Error
+  /v1/users/{id_user}/block:
+    patch:
+      tags:
+        - Admin
+      summary: Block user
+      security:
+        - apiKey: [ ]
+      parameters:
+        - name: id_user
+          in: path
+          description: User ID
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Block user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SuccessResponse'
+        '500':
+          description: Internal Server Error
+  /v1/users/{id_user}/unblock:
+    patch:
+      tags:
+        - Admin
+      summary: Unblock user
+      security:
+        - apiKey: [ ]
+      parameters:
+        - name: id_user
+          in: path
+          description: User ID
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Unblock user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SuccessResponse'
+        '500':
+          description: Internal Server Error
+  /v1/users/get_unblock:
+    get:
+      tags:
+        - Admin
+      summary: Get unblock user
       security:
         - apiKey: [ ]
       responses:
         '200':
-          description: Counts of all users and tweets
+          description: Unblock user
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GetCountsUsersAndTweets'
+                $ref: '#/components/schemas/GetUsersResponse'
+        '500':
+          description: Internal Server Error
+  /v1/users/get_block:
+    get:
+      tags:
+        - Admin
+      summary: Get block user
+      security:
+        - apiKey: [ ]
+      responses:
+        '200':
+          description: GetBlock user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetUsersResponse'
         '500':
           description: Internal Server Error
 components:
@@ -710,6 +818,11 @@ components:
         location:
           type: string
           format: string
+    SuccessResponseList:
+      type: object
+      properties:
+        status:
+          type: integer
     SuccessResponse:
       type: object
       properties:
@@ -717,6 +830,15 @@ components:
           type: string
         message:
           type: string
+    GetUsersResponse:
+      type: array
+      items:
+        type: object
+        properties:
+          id:
+            type: integer
+          username:
+            type: string
   securitySchemes:
     apiKey:
       type: apiKey
